--- a/scss/setup/_base.scss
+++ b/scss/setup/_base.scss
@@ -1,9 +1,14 @@
 html {
   font-family: sans-serif;
   color: white;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.20);
 }
 
 body {
   height: 100vh;
   overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
